--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -51,8 +51,9 @@ jobs:
         run: mkdir -p build/output
 
       - name: Create a dummy file to be artifact
-        run: echo "This is a dummy build artifact file. Version: ${{ steps.gitversion.outputs.semVer }}" > build/output/artifact.txt
-
+        run: |
+          echo "This is a dummy build artifact file. Version: ${{ steps.gitversion.outputs.semVer }}" > build/output/artifact.txt
+          ls -l build/output
 
       - name: Publish Build Artifacts
         uses: actions/upload-artifact@v3
