--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -13,6 +13,9 @@ on:
 jobs:
   versioning:
     runs-on: ubuntu-latest
+    permissions:
+     contents: write
+     pull-requests: write
 
     steps:
       - name: Checkout code
