--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -53,7 +53,7 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git tag -a "v2${{ steps.gitversion.outputs.semVer }}" -m "Release v${{ steps.gitversion.outputs.semVer }}"
-          git push origin "v${{ steps.gitversion.outputs.semVer }}"
+          git push origin "v2${{ steps.gitversion.outputs.semVer }}"
 
       - name: Create Output Directory
         run: mkdir -p build/output
