--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Debug GitVersion Output
         run: |
-          echo "GitVersion Output  (full): ${{ steps.gitversion.outputs.semVer }}"
+          echo "GitVersion Output (semVer): ${{ steps.gitversion.outputs.semVer }}"
 
 
       - name: Output GitVersion
