--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -1,70 +1,85 @@
-name: Semantic Versioning POC
-
+name: Deploy to Lightsail Instance
 on:
-  push:
-    branches:
-      - main
-      - develop
-  pull_request:
-    branches:
-      - main
-      - develop
-
+  workflow_dispatch:
+    inputs:
+      Branch_name:
+        description: Choose a branch to deploy
+        required: true
+        default: develop
+        type: string
+      environment:
+        description: Choose an environment instance
+        required: true
+        type: choice
+        options:
+          - testdevapi.consark.ai
+          - demoai-api.consark.ai
+          - aidevapp-api.consark.ai
+permissions:
+  contents: read
+  id-token: write
+  pages: write
 jobs:
-  versioning:
+  Build-deploy-Testdevapi:
+    if: '${{ github.event.inputs.environment == ''testdevapi.consark.ai'' }}'
     runs-on: ubuntu-latest
-    permissions:
-     contents: write
-     pull-requests: write
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Deploy via SSH to testdevapi.consark.ai
+        uses: appleboy/ssh-action@v1.0.0
         with:
-          fetch-depth: 0
-
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3
+          host: '${{ secrets.TEST_HOST }}'
+          username: '${{ secrets.TEST_USER }}'
+          key: '${{ secrets.TEST_DEPLOY_KEY }}'
+          port: 22
+          script: |
+            cd /home/ec2-user/git-repo/supernova_v2.1
+            git fetch origin
+            git checkout ${{ github.event.inputs.Branch_name }}
+            git pull origin ${{ github.event.inputs.Branch_name }}
+            docker-compose down
+            docker-compose up --build -d
+            docker ps
+  Build-deploy-Demoai:
+    if: '${{ github.event.inputs.environment == ''demoai-api.consark.ai'' }}'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Deploy via SSH to demoai-api.consark.ai
+        uses: appleboy/ssh-action@v1.0.0
         with:
-          dotnet-version: '6.0.x'
-
-      - name: Install GitVersion Tool
-        run: dotnet tool install --global GitVersion.Tool --version 5.*
-
-      - name: Add .NET Tools Path
-        run: echo "${HOME}/.dotnet/tools" >> $GITHUB_PATH
-
-      - name: Run GitVersion
-        id: gitversion
-        run: dotnet-gitversion . /output json /output buildserver
-
-      - name: Debug GitVersion Output
-        run: |
-          echo "GitVersion Output (semVer): ${{ steps.gitversion.outputs.semVer }}"
-
-
-      - name: Output GitVersion
-        run: |
-          echo "Version: ${{ steps.gitversion.outputs.semVer }}"
-
-      - name: Tag Release
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git tag -a "v2.0.0${{ steps.gitversion.outputs.semVer }}" -m "Release v${{ steps.gitversion.outputs.semVer }}"
-          git push origin "v2.1.0${{ steps.gitversion.outputs.semVer }}"
-
-
-      - name: Create Output Directory
-        run: mkdir -p build/output
-
-      - name: Create a dummy file to be artifact
-        run: |
-         echo "Hello GuysI am robot Version: ${{ steps.gitversion.outputs.semVer }}" > build/output/artifact.txt
-         ls -l build/output
-      - name: Publish Build Artifacts
-        uses: actions/upload-artifact@v4
+          host: '${{ secrets.DEMO_HOST }}'
+          username: '${{ secrets.DEMO_USER }}'
+          key: '${{ secrets.DEMO_DEPLOY_KEY }}'
+          port: 22
+          script: | 
+            cd /home/ec2-user/new_git_setup/supernova_v2.1
+            git fetch origin 
+            git checkout ${{ github.event.inputs.Branch_name }}
+            git pull origin ${{ github.event.inputs.Branch_name }}
+            docker-compose down
+            docker-compose up --build -d
+            docker ps
+  Build-deploy-Aidevapp:
+    if: '${{ github.event.inputs.environment == ''aidevapp-api.consark.ai'' }}'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Deploy via SSH to aidevapp-api.consark.ai
+        uses: appleboy/ssh-action@v1.0.0
         with:
-            name: app-${{ steps.gitversion.outputs.semVer }}
-            path: build/output
+          host: '${{ secrets.AIDEV_HOST }}'
+          username: '${{ secrets.AIDEV_USER }}'
+          key: '${{ secrets.AIDEV_DEPLOY_KEY }}'
+          port: 22 
+          script: |
+            cd /home/ec2-user/supernova_v2.1
+            git fetch origin
+            git checkout ${{ github.event.inputs.Branch_name }}
+            git pull origin ${{ github.event.inputs.Branch_name }}
+            docker-compose down
+            docker-compose up --build -d
+            docker ps
